--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_native_splash: ^1.2.0
   http: ^0.13.3
   flutter_local_notifications: ^8.1.1+2
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
