--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   path_provider: ^2.0.3
   logger: ^1.1.0
   shared_preferences: ^2.0.7
-  flutter_native_splash: ^1.2.0
   http: ^0.13.3
   flutter_local_notifications: ^8.1.1+2
   google_fonts: ^2.1.0
@@ -40,6 +39,18 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_native_splash: ^1.2.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  web: true
+  image_path: "lib/assets/app-icon.png"
+
+flutter_native_splash:
+  color: "#009688"
+  image: "lib/assets/app-icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
