--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^0.13.3
   flutter_local_notifications: ^8.1.1+2
   google_fonts: ^2.1.0
+  url_launcher: ^6.0.10
 
 dev_dependencies:
   flutter_test:
