--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "seeft_mobile",
-    "short_name": "seeft_mobile",
+    "name": "SeeFT",
+    "short_name": "SeeFT",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
+    "background_color": "#009688",
     "theme_color": "#0175C2",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
