--- a/web/manifest.json
+++ b/web/manifest.json
@@ -4,7 +4,7 @@
     "start_url": ".",
     "display": "standalone",
     "background_color": "#009688",
-    "theme_color": "#0175C2",
+    "theme_color": "#009688",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
