--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,9 @@
 {
   "extends": [
-    "config:base"
+    "config:base",
+    "ignorePresets": [":prHourlyLimit2"],
+    "timezone": "Asia/Tokyo",
+    "dependencyDashboard": false,
+    "branchConcurrentLimit": 0
   ]
 }
