--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,7 @@
 {
-  "extends": [
-    "config:base",
-    "ignorePresets": [":prHourlyLimit2"],
-    "timezone": "Asia/Tokyo",
-    "dependencyDashboard": false,
-    "branchConcurrentLimit": 0
-  ]
+  "extends": ["config:base"],
+  "ignorePresets": [":prHourlyLimit2"],
+  "timezone": "Asia/Tokyo",
+  "dependencyDashboard": false,
+  "branchConcurrentLimit": 0
 }
