--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,23 +7,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation:
-  go_router:
-  hooks_riverpod:
-  http:
-  meta:
-  simple_logger:
+  freezed_annotation: ^2.1.0
+  go_router: ^5.0.3
+  google_fonts: ^3.0.1
+  hooks_riverpod: ^1.0.4
+  http: ^0.13.5
+  meta: ^1.8.0
+  simple_logger: ^1.9.0+1
 dev_dependencies:
-  build_runner:
+  build_runner: ^2.2.1
   flutter_test:
     sdk: flutter
-  freezed:
-  go_router_builder:
+  freezed: ^2.1.1
+  go_router_builder: ^1.0.14
   image_test_utils:
     git:
       url: https://github.com/mono0926/image_test_utils.git
       ref: add-compressionState
-  json_serializable:
+  json_serializable: ^6.4.1
   mockito:
   pedantic_mono:
 flutter:
